tests/expectations/compiler/function/shadow_parameter_fail.out
DCE_ENABLED:
Error [EPAR0370005]: expected : -- found '='
    --> compiler-test:4:16
     |
   4 |         let hi = 2u8;
     |                ^

DCE_DISABLED:
Error [EPAR0370005]: expected : -- found '='
    --> compiler-test:4:16
     |
   4 |         let hi = 2u8;
     |                ^
